--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,11 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:28.0.0"
     implementation "com.android.support:cardview-v7:28.0.0"
 
+    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.google.code.gson:gson:2.8.5' // for Googles Gson JSON Parser
+
+
+
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:1.1.1"
     // alternatively, just ViewModel
