--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
 dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.google.firebase:firebase-database:16.0.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -60,11 +61,11 @@ dependencies {
     implementation 'com.makeramen:roundedimageview:2.2.1'
     implementation "com.android.support:recyclerview-v7:28.0.0"
     implementation "com.android.support:cardview-v7:28.0.0"
+    //implementation 'com.sqaureup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.code.gson:gson:2.8.5' // for Googles Gson JSON Parser
-
-
 
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:1.1.1"
@@ -78,8 +79,17 @@ dependencies {
     //Support Design (toolbars)
     implementation 'com.android.support:design:28.0.0'
 
+    //google signin
+    implementation 'com.google.android.gms:play-services-auth:11.8.0'
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
     // Room
     def room_version = "1.1.1"
     implementation "android.arch.persistence.room:runtime:$room_version"
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
 }
+
+apply plugin: 'com.google.gms.google-services'
