--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:name=".main.FoodRaterApp"
         android:allowBackup="true"
@@ -12,7 +11,11 @@
         android:label="Food Rater"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.Help"></activity>
+        <activity android:name=".image.ImagesActivity"></activity>
+        <activity android:name=".signin.LogoutActivity" />
+        <activity android:name=".signin.SigninActivity" />
+        <activity android:name=".image.ImageActivity" />
+        <activity android:name=".activities.Help" />
         <activity android:name=".journal.JournalActivity" />
         <activity android:name=".journal.JournalListActivity" />
         <activity android:name=".registration.ProfileActivity" />
@@ -21,7 +24,7 @@
         <activity android:name=".grocery.GroceryHome">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.Home"/>
+                android:value=".activities.Home" />
         </activity>
         <activity
             android:name=".notes.NewMealActivity"
