--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,14 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.google.firebase:firebase-database:16.0.1'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+
+    //2 below
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation 'com.google.android.gms:play-services-maps:9.0.2'
+
+    implementation 'com.google.android.gms:play-services-flags:16.0.1'
+    implementation 'com.google.android.gms:play-services-basement:16.0.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -90,6 +98,7 @@ dependencies {
     def room_version = "1.1.1"
     implementation "android.arch.persistence.room:runtime:$room_version"
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+
 }
 
 apply plugin: 'com.google.gms.google-services'
